--- a/documents/FinalReport.Rmd
+++ b/documents/FinalReport.Rmd
@@ -1,10 +1,15 @@
 ---
 title: "Data Science Job Salary Predictor"
-author: UBC MDS Cohort 7 DSCI522 Team 16 - Chen Lin, Jonah Hamilton, Mike Guron, Tanmay Agarwal
+author: "UBC MDS Cohort 7 DSCI522 Team 16 - Chen Lin, Jonah Hamilton, Mike Guron,
+  Tanmay Agarwal"
 date: "11/26/2022"
-output: 
+output:
+  html_document:
+    toc: yes
+    df_print: paged
   pdf_document:
-    toc: TRUE
+    toc: yes
+header-includes: \usepackage[labelformat=empty]{caption}
 bibliography: references.bib
 ---
 
@@ -19,7 +24,7 @@ library(kableExtra)
 
 By this point we have all heard how data-related jobs are the talk of the town and by just learning to code you could be raking in a 6-figure salary in no time. But aside from all the hype and click bait news articles, is it possible to predict how much compensation you can expect given your experience and other related factors? As current budding data scientists our group is very interested in this question. Using the latest release of the Stack overflow Annual Developers Survey, we set out to build a machine learning model to predict the total yearly compensation for data-related jobs.
 
-After conducting pre-processing and a quick feature selection pipeline, we decided to use a Random Forrest Regressoras our final model. Once hyperparameter tuning was completed, our model yielded a score of BLANK on unseen training data. Although the model did not preform as well as we had hoped, it still did better than the Dummy Regressor! As this was our first attempt at answering this question and the data set we chose ended up being very difficult to work with given the way data was recorded from the survey, we all agree that this was a good staring point and that results could be improved with some focused feature engineering. Also, as this project is fully reproducible, feel free to copy the repo and give it a try yourself!
+After conducting pre-processing and a quick feature selection pipeline, we decided to use a Random Forrest Regressor as our final model. Once hyperparameter tuning was completed, our model yielded a mean $R^2$ score of 0.27 on unseen training data. Although the model did not preform as well as we had hoped, it still did better than the Dummy Regressor! As this was our first attempt at answering this question and the data set we chose ended up being very difficult to work with given the way data was recorded from the survey, we all agree that this was a good staring point and that results could be improved with some focused feature engineering. Also, as this project is fully reproducible, feel free to copy the repo and give it a try yourself!
 
 # Introduction
 
@@ -141,13 +146,13 @@ We have 266 usable features in total after preprocessing and transforming our in
 
 Below is the distribution of our target column, which rightly skewed.
 
-```{r out.width="60%", out.height="60%", fig.align='center', fig.cap="**Figure 1.** Distribution of Yearly Compensation"}
+```{r out.width="60%", out.height="60%", fig.align='center', fig.cap="Figure 1. Distribution of Yearly Compensation"}
 knitr::include_graphics("figures/yearly_compensation.png")
 ```
 
 There are a few categorical features that were of interest to us, including Main Branch, Country, Education Level and Age so we examined their distributions via boxplots. Based on the figures below we can see that developers in the USA tend to make more on average than those in Canada, with age and education level not showing any consistent trends.
 
-```{r out.width="100%", fig.align='center', fig.cap="**Figure 2.** Distribution of Yearly Compensation for Key Categorical Features"}
+```{r out.width="100%", fig.align='center', fig.cap="Figure 2. Distribution of Yearly Compensation for Key Categorical Features"}
 knitr::include_graphics("figures/final_boxplot.png")
 ```
 
@@ -177,7 +182,7 @@ The result decision was based on the mean R2 score from the cross validation. Th
 
 ```{r fig.align='center'}
 kable(read.csv("results/model_accuracies.csv"),
-      caption = "**Table 2.** Cross Validation results for different models") %>%
+      caption = "Table 2. Cross Validation results for different models") %>%
   kable_styling(full_width = F, font_size = 10) %>%
   kable_classic_2(full_width = F) %>%
   scroll_box(width = "100%", height = "200px")
@@ -191,7 +196,7 @@ By using Ridge we are able to select 105 features, but the cross-validation accu
 
 ```{r fig.align='center'}
 kable(read.csv("results/rf_result_with_feature_selection.csv"),
-      caption = "**Table 3.** Cross Validation results for random forest with selected features") %>%
+      caption = "Table 3. Cross Validation results for random forest with selected features") %>%
   kable_styling(full_width = F, font_size = 10) %>%
   kable_classic_2(full_width = F) %>%
   scroll_box(width = "100%", height = "200px")
@@ -203,7 +208,7 @@ By using the RandomizedSearchCV, the best model is selection based on best score
 
 ```{r fig.align='center'}
 kable(read.csv("results/best_params.csv"),
-      caption = "**Table 4.** Best Parameters for random forest") %>%
+      caption = "Table 4. Best Parameters for random forest") %>%
   kable_styling(full_width = F, font_size = 10) %>%
   kable_classic_2(full_width = F) %>%
   scroll_box(width = "100%", height = "200px")
@@ -211,7 +216,7 @@ kable(read.csv("results/best_params.csv"),
 
 ```{r fig.align='center'}
 kable(read.csv("results/validation_score.csv"),
-      caption = "**Table 5.** Validation score for random forest") %>%
+      caption = "Table 5. Validation score for random forest") %>%
   kable_styling(full_width = F, font_size = 10) %>%
   kable_classic_2(full_width = F) %>%
   scroll_box(width = "100%", height = "200px")
@@ -225,7 +230,7 @@ By using the best model with the best hyperparameter as mentioned above, the mod
 
 ```{r fig.align='center'}
 kable(read.csv("results/test_score.csv"),
-      caption = "**Table 6.** Test Score") %>%
+      caption = "Table 6. Test Score") %>%
   kable_styling(full_width = F, font_size = 10) %>%
   kable_classic_2(full_width = F) %>%
   scroll_box(width = "100%", height = "200px")
